--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 .env
+*.db
+*.db-shm
+*.db-wal
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+venv/
+env/
+ENV/
+.venv
+*.log
+.DS_Store
+.vscode/
+.idea/
+
